feat(DCC-251): fork wavesplatform/WavesJ → packages/jvm/wavesj
- Import wavesplatform/WavesJ@2f78fd3f6 via git subtree (1.6.4-SNAPSHOT)
- Rewrite pom.xml: Java 25, io.decentralchain groupId, transactions-java dep
- Apply all DCC-250 changes: JDK HttpClient, DccEthConverter/Module/Mapper
- Delete upstream Apache HttpClient + commons-lang3 dependencies
- Add final to all utility/data classes (BlockchainRewards, Common, etc.)
- Configure JaCoCo, SpotBugs, PMD 7.x (0 violations), CycloneDX SBOM
- Add GHA CI/CD workflows (build + audit + sbom, publish-on-tag)
- Add project.json with Nx targets (audit, build, clean, test, verify)
- Add KNOWN_ISSUES.md (KNOWN-1 through KNOWN-5)